--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs-ec2",
+  "name": "mernapp",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -15,6 +15,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.10",
